# pydpf-core

./: .codespell  .coveragerc  .editorconfig  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  AUTHORS  CNAME  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  Makefile  README.md  SECURITY.md  codacy.yml  codecov.yml  conftest.py  ignore_words.txt  index.html  pyproject.toml  pytest.ini  requirements_build.txt  requirements_docs.txt  requirements_style.txt  requirements_test.txt  robots.txt  run_client.bat  setup.cfg  setup.py  sitemap.xml  test.py  test_checkversion.py  test_code_docstrings.py  test_datasources.py  test_factories.py  test_field.py  test_fieldscontainer.py  (+15 more)
.ci/: 2707_test.py  azure-pipelines.yml  build_doc.bat  build_doc.sh  build_operators_doc.py  build_wheel.py  code_generation.py  edit_ansys_version.py  generate_operators_doc.py  operator-replace-desc.py  operator_doc_per_context.py  requirements_test_xvfb.txt  run_examples.py  run_non_regression_examples.py  test_plot_image.py  update_dpf_dependencies.py
.ci/templates/: kill-servers-windows.yml  prepare-environment-linux.yml  prepare-environment-windows.yml  run-unit-tests-linux.yml  run-unit-tests-windows.yml
.devcontainer/: .gitignore  DPF_Dockerfile  Dockerfile  PyDPFDockerfile  README.md  compose.example.yaml  compose.override.example.yaml  compose.yaml  devcontainer.json  dpf.example.env
.devcontainer/scripts/: postcreate.sh
.github/: ansys_dpf_gate-0.2.0-py3-none-any.whl  ansys_dpf_gate-0.2.1-py3-none-any.whl  ansys_dpf_gate-0.2.2-py3-none-any.whl  ansys_dpf_gate-0.2.2.dev0-py3-none-any.whl  ansys_dpf_gate-0.2.3-py3-none-any.whl  ansys_dpf_gate-0.2.dev0-py3-none-any.whl  ansys_dpf_gate-0.3.0-py3-none-any.whl  ansys_dpf_gate-0.3.0.dev0-py3-none-any.whl  ansys_dpf_gate-0.3.1.dev0-py3-none-any.whl  ansys_dpf_gatebin-0.2.0-py3-none-win_amd64.whl  ansys_dpf_gatebin-0.2.1-py3-none-win_amd64.whl  ansys_dpf_gatebin-0.2.2-py3-none-win_amd64.whl  ansys_dpf_gatebin-0.2.2.dev0-py3-none-win_amd64.whl  ansys_dpf_gatebin-0.2.3-py3-none-win_amd64.whl  ansys_dpf_gatebin-0.2.3.dev0-py3-none-win_amd64.whl  ansys_dpf_gatebin-0.2.dev0-py3-none-win_amd64.whl  ansys_dpf_gatebin-0.3.0-py3-none-win_amd64.whl  ansys_dpf_gatebin-0.3.0.dev0-py3-none-win_amd64.whl  ansys_grpc_dpf-0.6.0-py3-none-any.whl  ansys_grpc_dpf-0.6.1-py3-none-any.whl  ansys_grpc_dpf-0.6.1.dev0-py3-none-any.whl  ansys_grpc_dpf-0.6.dev0-py3-none-any.whl  ansys_grpc_dpf-0.7.0-py3-none-any.whl  ansys_grpc_dpf-0.7.0.dev0-py3-none-any.whl  dependabot.yml  labeler.yml  labels.yml  release.yml
00-basic/: 00-basic_example.py  01-basic_operators.py  03-create_entities.py  04-basic-load-file.py
02-modal-harmonic/: 00-multi_harmonic.py
03-advanced/: 02-volume_averaged_stress.py
dev/: .buildinfo  contributing.html  genindex.html  index.html  objects.inv  operator_reference.html  operator_reference_entry.html  operator_reference_premium.html  py-modindex.html  pydpf-core_clone_install.html  search.html  searchindex.js
doc/: .vale.ini  make.bat
docker/: Dockerfile  IMAGE_NAME  README.md  build.sh  env.sh  push_image.sh  run_image.sh  run_tests.sh
docs/: .vale.ini  MakeFile  Makefile  file.err  log.txt  make.bat
examples/: 00-basic_example.ipynb  00-basic_example.py  00-basic_plotting.ipynb  00-basic_transient.ipynb  00-cfx_res_files.ipynb  00-compare_modes.ipynb  00-compute_and_average.ipynb  00-create_polygons_and_polyhedrons.ipynb  00-distributed_total_disp.ipynb  00-fluids_model.ipynb  00-hdf5_double_float_comparison.ipynb  00-lsdyna_operators.ipynb  00-multi_harmonic.ipynb  00-multistage_advanced_options.ipynb  00-wrapping_numpy_capabilities.ipynb  00_plot_3d_streamlines.ipynb  01-average_across_bodies.ipynb  01-basic_operators.ipynb  01-basic_operators.py  01-compare_results.ipynb  01-distributed_workflows_on_remote.ipynb  01-fluids_mesh.ipynb  01-lsdyna_beam.ipynb  01-matrix-operations.ipynb  01-modal_cyclic.ipynb  01-modal_superposition.ipynb  01-package_python_operators.ipynb  01-plot_and_animate_modes.ipynb  01-reduced_matrices_export.ipynb  01-solve_harmonic_problem.ipynb  01-transient_easy_time_scoping.ipynb  01_plot_surface_streamlines.ipynb  02-basic_field_containers.ipynb  02-basic_field_containers.py  02-distributed-msup_expansion.ipynb  02-fluids_results.ipynb  02-hdf5_serialize_and_read.ipynb  02-modal_cyclic_no_expansion.ipynb  02-python_operators_with_dependencies.ipynb  02-solution_combination.ipynb  (+49 more)
examples_notebooks/: DPF_CORE_DEMO.ipynb  HDFS5_float_vs_double.ipynb  cyclic_simple.ipynb  intro.ipynb  reduced matrices export.ipynb  simple_static.ipynb  transient_minmax_overTime.ipynb  tuto_basic.ipynb  tuto_cyclic.ipynb  tuto_load_plugin.ipynb  tuto_mapdl_run.ipynb  tuto_mapdl_run_cyclic.ipynb  tuto_with_helpers.ipynb
python-plugins/: create_sites_for_python_operators.ps1  create_sites_for_python_operators.sh
python_plugins/: README.md  create_sites_for_python_operators.ps1  easy_statistics.py
release/: versions.json
requirements/: requirements_build.txt  requirements_dev.txt  requirements_doc.txt  requirements_docs.txt  requirements_install.txt  requirements_style.txt  requirements_test.txt
test_remote_workflow/: test_remote_workflow.py
tests/: conftest.py  test_animation.py  test_animator.py  test_any.py  test_aserver.py  test_boundary_conditions.py  test_cache.py  test_cff.py  test_changelog.py  test_checkversion.py  test_code_docstrings.py  test_codegeneration.py  test_collection.py  test_custom_type_field.py  test_custom_type_fields_container.py  test_cyclic_support.py  test_data_tree.py  test_datasources.py  test_documentation.py  test_dpf_logger.py  test_dpf_vector.py  test_elements.py  test_examples.py  test_faces.py  test_factories.py  test_field.py  test_fieldscontainer.py  test_generic_data_container.py  test_genericsupport.py  test_geometry.py  test_hdf5.py  test_incremental.py  test_label_space.py  test_launcher.py  test_launcher_remote.py  test_local_server.py  test_lsdyna.py  test_materials_container.py  test_math.py  test_mesh_info.py  (+39 more)
version/: index.html
(+95180 files in other folders)
