[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0.0", "wheel"]

[project]
# Check https://setuptools.pypa.io/en/stable/userguide/quickstart.html for all available sections
name = "ansys-dpf-core"
version = "0.15.1.dev0"
description = "Data Processing Framework - Python Core "
readme = "README.md"
requires-python = ">=3.10, <4"
license = {file = "LICENSE"}
authors = [
    {name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"},
]
maintainers = [
    {name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"},
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "ansys-tools-common",
    "grpcio >=1.63.0",
    "importlib-metadata >=4.0",
    "numpy",
    "packaging",
    "protobuf",
    "psutil",
    "setuptools",
    "tqdm",
]

[project.optional-dependencies]
graphics = [
    # 2D chart plotting
    "matplotlib>=3.2",
    # 3D plotting
    "pyvista>=0.32.0",
    "vtk!=9.4.0",
    # Animations
    "imageio",
    "imageio-ffmpeg",
]

plotting = [
    # 2D chart plotting
    "matplotlib>=3.2",
    # 3D plotting
    "pyvista>=0.32.0",
    "vtk",
    # Animations
    "imageio",
    "imageio-ffmpeg",
]

operator_doc = [
    # Operator documentation generation
    "jinja2",
]

[dependency-groups]

# NOTE: The `dependency-groups` section is used to define groups of dependencies
# only available when a developer clones the repository and installs the package
# for local development.
dev = [
  "pre-commit==4.5.1",
  { include-group = "doc" },
  { include-group = "tests" },
]
doc = [
  "ansys-sphinx-theme[autoapi]==1.6.4",
  "ipyvtklink==0.2.3",
  "jupyter-sphinx==0.5.3",
  "jupytext==1.19.0",
  "myst-parser==4.0.1",
  "nbconvert==7.16.6",
  "nbsphinx==0.9.8",
  "notebook==7.5.2",
  "numpydoc==1.10.0",
  "pdf2image==1.17.0",
  "quarto-cli==1.8.25",
  "sphinx==8.2.3",
  "sphinx-autodoc-typehints==3.1.0",
  "sphinx-copybutton==0.5.2",
  "sphinx-jinja==2.0.2",
  { include-group = "general-all" },
]
tests = [
  { include-group = "general-all" },
  { include-group = "tests-minimal" },
]
general-all = [
  "ansys-platform-instancemanagement==1.1.2",
  "ansys-tools-common==0.4.1",
  "ansys-tools-visualization-interface==0.12.1",
  "beartype==0.22.9",
  "docker==7.1.0",
  "geomdl==5.4.0",
  "grpcio==1.76.0",
  "grpcio-health-checking==1.76.0",
  "matplotlib==3.10.8",
  "numpy==2.2.6; python_version<'3.11'",
  "numpy==2.4.0; python_version>='3.11'",
  "pint==0.25.2",
  "protobuf==6.33.4",
  "pygltflib==1.16.5",
  "pyvista[jupyter]==0.46.5",
  "requests==2.32.5",
  "scipy==1.15.3; python_version<'3.11'",
  "scipy==1.16.3; python_version>='3.11'",
  "semver==3.0.4",
  "six==1.17.0",
  "vtk==9.5.2",
]
tests-minimal = [
  "pytest==9.0.2",
  "pytest-cov==7.0.0",
  "pytest-pyvista==0.3.2",
  "pyyaml==6.0.3",
]

[project.urls]
Homepage = "https://dpf.docs.pyansys.com/"
Documentation = "https://dpf.docs.pyansys.com/"
Source = "https://github.com/ansys/pydpf-core"
Tracker = "https://github.com/ansys/pydpf-core/issues"

[project.scripts]
dpf_generate_operators_doc = "ansys.dpf.core.documentation.generate_operators_doc:run_with_args"

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
#   "E",    # pycodestyle, see https://beta.ruff.rs/docs/rules/#pycodestyle-e-w
    "D",    # pydocstyle, see https://beta.ruff.rs/docs/rules/#pydocstyle-d
#   "F",    # pyflakes, see https://beta.ruff.rs/docs/rules/#pyflakes-f
    "I",    # isort, see https://beta.ruff.rs/docs/rules/#isort-i
#   "N",    # pep8-naming, see https://beta.ruff.rs/docs/rules/#pep8-naming-n
   "PTH",  # flake9-use-pathlib, https://beta.ruff.rs/docs/rules/#flake8-use-pathlib-pth
   "TD",   # flake8-todos, https://docs.astral.sh/ruff/rules/#flake8-todos-td
]
ignore = [
    # pycodestyle
    "E501",  # Line too long. Ignoring this so "ruff.formatter" manages line length.
    # flake8-todos
    "TD002", # Missing author in TODOs comment
]

[tool.ruff.lint.per-file-ignores]
# Ignore `D` rules everywhere except for the `src/` directory.
"!src/**.py" = ["D"]

[tool.ruff.lint.pydocstyle]
# Settings: https://docs.astral.sh/ruff/settings/#lintpydocstyle
convention = "numpy"

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["ansys"]

[tool.coverage.run]
source = ["ansys.dpf.core"]

[tool.coverage.report]
show_missing = true

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]

[tool.setuptools.package-data]
"ansys.dpf.gatebin" = ["*.so", "*.dll"]
"ansys.dpf.core.documentation" = ["toc_template.j2", "operator_doc_template.j2"]

