[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0.0", "wheel"]

[project]
# Check https://setuptools.pypa.io/en/stable/userguide/quickstart.html for all available sections
name = "ansys-dpf-core"
version = "0.15.1.dev0"
description = "Data Processing Framework - Python Core "
readme = "README.md"
requires-python = ">=3.10, <4"
license = {file = "LICENSE"}
authors = [
    {name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"},
]
maintainers = [
    {name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"},
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "ansys-tools-common",
    "grpcio >=1.63.0",
    "importlib-metadata >=4.0",
    "numpy",
    "packaging",
    "protobuf",
    "psutil",
    "setuptools",
    "tqdm",
]

[project.optional-dependencies]
graphics = [
    # 2D chart plotting
    "matplotlib>=3.2",
    # 3D plotting
    "pyvista>=0.32.0",
    "vtk!=9.4.0",
    # Animations
    "imageio",
    "imageio-ffmpeg",
]

plotting = [
    # 2D chart plotting
    "matplotlib>=3.2",
    # 3D plotting
    "pyvista>=0.32.0",
    "vtk",
    # Animations
    "imageio",
    "imageio-ffmpeg",
]

operator_doc = [
    # Operator documentation generation
    "jinja2",
]

[dependency-groups]

doc = [
  "ansys-sphinx-theme[autoapi]==1.6.4",
  "enum-tools[sphinx]==0.13.0",
  "graphviz==0.21",
  "imageio==2.37.0",
  "imageio-ffmpeg==0.6.0",
  "jupyter_sphinx==0.5.3",
  "nbsphinx==0.9.5",
  "pypandoc==1.16.2",
  "pytest-sphinx==0.7.1",
  "pyvista==0.46.5",
  "sphinx==8.2.3",
  "sphinx-copybutton==0.5.2",
  "sphinx-gallery==0.20.0",
  "sphinx-jinja==2.0.2",
  "sphinx-notfound-page==1.1.0",
  "sphinx-reredirects==0.1.6",
  "sphinx_design==0.6.1",
  "sphinxcontrib-napoleon==0.7",
  "vtk==9.4.2",
]
test = [
  "ansys-platform-instancemanagement==1.1.2",
  "ansys-tools-common==0.4.1",
  "coverage==7.13.2",
  "graphviz==0.21",
  "imageio==2.37.0",
  "imageio-ffmpeg==0.6.0",
  "jinja2==3.1.6",
  "pypandoc_binary==1.16.2",
  "pytest==9.0.2",
  "pytest-cov==7.0.0",
  "pytest-order==1.3.0",
  "pytest-rerunfailures==16.1",
  "pyvista==0.46.5",
  "vtk==9.4.2",
]
build = [
  "black==26.1.0",
  "build==1.4.0",
  "chevron==0.14.0",
  "pypandoc_binary==1.16.2",
  "wheel==0.46.3",
]
install = [
  "importlib-metadata==8.7.0",
  "numpy==2.4.1",
  "packaging==26.0",
  "psutil==7.2.1",
  "tqdm==4.67.1",
]

[project.urls]
Homepage = "https://dpf.docs.pyansys.com/"
Documentation = "https://dpf.docs.pyansys.com/"
Source = "https://github.com/ansys/pydpf-core"
Tracker = "https://github.com/ansys/pydpf-core/issues"

[project.scripts]
dpf_generate_operators_doc = "ansys.dpf.core.documentation.generate_operators_doc:run_with_args"

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
#   "E",    # pycodestyle, see https://beta.ruff.rs/docs/rules/#pycodestyle-e-w
    "D",    # pydocstyle, see https://beta.ruff.rs/docs/rules/#pydocstyle-d
#   "F",    # pyflakes, see https://beta.ruff.rs/docs/rules/#pyflakes-f
    "I",    # isort, see https://beta.ruff.rs/docs/rules/#isort-i
#   "N",    # pep8-naming, see https://beta.ruff.rs/docs/rules/#pep8-naming-n
   "PTH",  # flake9-use-pathlib, https://beta.ruff.rs/docs/rules/#flake8-use-pathlib-pth
   "TD",   # flake8-todos, https://docs.astral.sh/ruff/rules/#flake8-todos-td
]
ignore = [
    # pycodestyle
    "E501",  # Line too long. Ignoring this so "ruff.formatter" manages line length.
    # flake8-todos
    "TD002", # Missing author in TODOs comment
]

[tool.ruff.lint.per-file-ignores]
# Ignore `D` rules everywhere except for the `src/` directory.
"!src/**.py" = ["D"]

[tool.ruff.lint.pydocstyle]
# Settings: https://docs.astral.sh/ruff/settings/#lintpydocstyle
convention = "numpy"

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["ansys"]

[tool.coverage.run]
source = ["ansys.dpf.core"]

[tool.coverage.report]
show_missing = true

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]

[tool.setuptools.package-data]
"ansys.dpf.gatebin" = ["*.so", "*.dll"]
"ansys.dpf.core.documentation" = ["toc_template.j2", "operator_doc_template.j2"]

